--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <div class="wrapper">
 
     <a class="site-title" href="/iccv2025-tutorial/">
-        <img src="/iccv2025-tutorial/assets/cvpr_b.svg" alt="ICCV Conference Logo" style="display: block; height: 50px;">
+        Learning Deep Low-Dimensional Models from High-Dimensional Data: From Theory to Practice
     </a>
 
     <nav class="site-nav">
