--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@ vision.</p>
 
 <div class="organizer" style="width: 102px;">
   
-  <img class="organizer-image" src="/iccv2025-tutorial/assets/images/placeholder.jpg" alt="" />
+  <img class="organizer-image" src="/iccv2025-tutorial/assets/images/bi.png" alt="" />
   
   <div>
 <h3 class="organizer-name">
@@ -446,7 +446,7 @@ vision.</p>
 
 <div class="organizer" style="width: 102px;">
   
-  <img class="organizer-image" src="/iccv2025-tutorial/assets/images/placeholder.jpg" alt="" />
+  <img class="organizer-image" src="/iccv2025-tutorial/assets/images/vp.png" alt="" />
   
   <div>
 <h3 class="organizer-name">
