--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@ vision.</p>
 <tbody>
 <tr>
 <td class="title" colspan="3">
-<strong>Session I:</strong> Introduction of Basic Low-dimensional Models in Vision
+<strong>Session I:</strong> Introduction of Basic Low-dimensional Models
 </td>
 </tr>
 <tr>
@@ -587,28 +587,28 @@ The session focuses on the strong conceptual connections between low-dimensional
   <a href="https://cse.osu.edu/people/zhu.3440">Zhihui Zhu</a>
 </td>
 <td>
-10:45-11:30 am
+10:45-11:45 am
 </td>
 </tr>
-<tr>
-<td>
-Understanding Low-Dimensional Representation in Intermediate Layer
-<br />
-<a class="abstract btn btn-sm z-depth-0" role="button" style="color:#959396;">(Lecture Abstract)</a>
-<br />
-<div class="abstract hidden">
-<p>
-Second, we show how low-dimensional structures also emerge in intermediate layers of learned deep neural networks. Specifically, we will characterize the progressive feature compression and discrimination from shallow to deep layers. Such a phenomenon is strongly correlated with the low-dimensional structure in learning dynamics, where the evolution of gradient descent only affects a minimal portion of singular vector spaces across all weight matrices.
-</p>
-</div>
-</td>
-<td>
-  <a href="https://qingqu.engin.umich.edu/">Qing Qu</a>
-</td>
-<td>
-11:30 am-12:00 pm
-</td>
-</tr>
+<!-- <tr> -->
+<!-- <td> -->
+<!-- Understanding Low-Dimensional Representation in Intermediate Layer -->
+<!-- <br /> -->
+<!-- <a class="abstract btn btn-sm z-depth-0" role="button" style="color:#959396;">(Lecture Abstract)</a> -->
+<!-- <br /> -->
+<!-- <div class="abstract hidden"> -->
+<!-- <p> -->
+<!-- Second, we show how low-dimensional structures also emerge in intermediate layers of learned deep neural networks. Specifically, we will characterize the progressive feature compression and discrimination from shallow to deep layers. Such a phenomenon is strongly correlated with the low-dimensional structure in learning dynamics, where the evolution of gradient descent only affects a minimal portion of singular vector spaces across all weight matrices. -->
+<!-- </p> -->
+<!-- </div> -->
+<!-- </td> -->
+<!-- <td> -->
+<!--   <a href="https://qingqu.engin.umich.edu/">Qing Qu</a> -->
+<!-- </td> -->
+<!-- <td> -->
+<!-- 11:30 am-12:00 pm -->
+<!-- </td> -->
+<!-- </tr> -->
 <tr>
 <td class="title" colspan="3">
 <strong>Session III:</strong> Understanding Low-Dimensional Structures in Diffusion Generative Models
@@ -630,7 +630,7 @@ We will establish a thorough understanding of the generalization of diffusion mo
   <a href="https://qingqu.engin.umich.edu/">Qing Qu</a>
 </td>
 <td>
-1:15-2:00 pm
+1:00-2:00 pm
 </td>
 </tr>
 <tr>
