--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 <h3 style="color: #44434d">
   
   
-    <b>Location:</b> TBD
+    <b>Location:</b> <a href="https://map.concept3d.com/?id=1107#!ce/24709?ct/25427,24748,24747,24709,24708,22261,0?m/231569?s/?sbc/">Hawai'i Convention Center 324</a>
   
   
 </h3>
@@ -507,7 +507,9 @@ vision.</p>
 </h2>
     
 
-<p>The tutorial will take place at <strong>ICCV 2025</strong>.</p>
+<p>The tutorial will take place at <strong>ICCV 2025</strong>, on October 19th at the <a href="https://map.concept3d.com/?id=1107#!ce/24709?ct/25427,24748,24747,24709,24708,22261,0?m/231569?s/?sbc/">Hawai’i Convention
+Center, Room
+324</a>.</p>
 
 <table>
 <colgroup>
@@ -590,25 +592,6 @@ The session focuses on the strong conceptual connections between low-dimensional
 10:45-11:45 am
 </td>
 </tr>
-<!-- <tr> -->
-<!-- <td> -->
-<!-- Understanding Low-Dimensional Representation in Intermediate Layer -->
-<!-- <br /> -->
-<!-- <a class="abstract btn btn-sm z-depth-0" role="button" style="color:#959396;">(Lecture Abstract)</a> -->
-<!-- <br /> -->
-<!-- <div class="abstract hidden"> -->
-<!-- <p> -->
-<!-- Second, we show how low-dimensional structures also emerge in intermediate layers of learned deep neural networks. Specifically, we will characterize the progressive feature compression and discrimination from shallow to deep layers. Such a phenomenon is strongly correlated with the low-dimensional structure in learning dynamics, where the evolution of gradient descent only affects a minimal portion of singular vector spaces across all weight matrices. -->
-<!-- </p> -->
-<!-- </div> -->
-<!-- </td> -->
-<!-- <td> -->
-<!--   <a href="https://qingqu.engin.umich.edu/">Qing Qu</a> -->
-<!-- </td> -->
-<!-- <td> -->
-<!-- 11:30 am-12:00 pm -->
-<!-- </td> -->
-<!-- </tr> -->
 <tr>
 <td class="title" colspan="3">
 <strong>Session III:</strong> Understanding Low-Dimensional Structures in Diffusion Generative Models
