--- a/index.html
+++ b/index.html
@@ -574,13 +574,13 @@ Bridging Symbolic Abstraction and Low-Dimensionality in Machine Reasoning: Algeb
 </tr>
 <tr>
 <td>
-Understanding Low-Dimensional Representation in Last-layer
+Emergence of Low-dimensional Representations in Deep Models
 <br />
 <a class="abstract btn btn-sm z-depth-0" role="button" style="color:#959396;">(Lecture Abstract)</a>
 <br />
 <div class="abstract hidden">
 <p>
-The session focuses on the strong conceptual connections between low-dimensional structures and deep models in terms of learned representation. We start with the introduction of an intriguing Neural Collapse phenomenon in the last-layer representation and its universality in deep network, and lay out the mathematical foundations of understanding its cause by studying its optimization landscapes. We then generalize and explain this phenomenon and its implications under data imbalanceness. Furthermore, we demonstrate the practical algorithmic implications of Neural Collapse on training deep neural networks.
+The session focuses on the strong conceptual connections between low-dimensional structures and deep models in terms of learned representation. We start with the introduction of an intriguing Neural Collapse phenomenon in the last-layer representation and its universality in deep network, and lay out the mathematical foundations of understanding its cause by studying its optimization landscapes. We demonstrate the practical algorithmic implications of Neural Collapse on training deep neural networks. We then study the hidden representations in generative models, like multimodality large language models (MLLMs) and introduce layerwise compression-expression phenomenon: early layers progressively produce compact and discriminative representations that encode task information from the input demonstrations, while later layers express these representations to incorporate the query and generate the prediction.
 </p>
 </div>
 </td>
