--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@ We will establish a thorough understanding of the generalization of diffusion mo
 </tr>
 <tr>
 <td>
-Exploring Low-Dimensional Structures for Controlling Diffusion Models
+Explore Low-Dimensional Structures for Constrained and Controllable Diffusion Models in Scientific Applications
 <br />
 <a class="abstract btn btn-sm z-depth-0" role="button" style="color:#959396;">(Lecture Abstract)</a>
 <br />
