--- a/index.html
+++ b/index.html
@@ -513,20 +513,22 @@ Center, Room
 
 <table>
 <colgroup>
-<col width="69%" />
+<col width="59%" />
 <col width="17%" />
 <col width="14%" />
+<col width="10%" />
 </colgroup>
 <thead>
 <tr>
 <th>Lecture</th>
 <th>Speaker</th>
 <th>Time</th>
+<th>Slides</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td class="title" colspan="3">
+<td class="title" colspan="4">
 <strong>Session I:</strong> Introduction of Basic Low-dimensional Models
 </td>
 </tr>
@@ -548,9 +550,12 @@ The first part will introduce fundamental properties and results for sensing, pr
 <td>
 9:00-10:00 am
 </td>
+<td>
+<a href="/iccv2025-tutorial/assets/slides/ICCV2025_Lec1.pdf">Slides</a>
+</td>
 </tr>
 <tr>
-<td class="title" colspan="3">
+<td class="title" colspan="4">
 <strong>Session II:</strong> Understanding Low-Dimensional Structures in Representation Learning
 </td>
 </tr>
@@ -571,6 +576,8 @@ Bridging Symbolic Abstraction and Low-Dimensionality in Machine Reasoning: Algeb
 <td>
 10:00-10:45 am
 </td>
+<td>
+</td>
 </tr>
 <tr>
 <td>
@@ -590,9 +597,12 @@ The session focuses on the strong conceptual connections between low-dimensional
 <td>
 11:00 am-12:00 pm
 </td>
+<td>
+<a href="/iccv2025-tutorial/assets/slides/ICCV2025_Lec3.pdf">Slides</a>
+</td>
 </tr>
 <tr>
-<td class="title" colspan="3">
+<td class="title" colspan="4">
 <strong>Session III:</strong> Understanding Low-Dimensional Structures in Diffusion Generative Models
 </td>
 </tr>
@@ -614,6 +624,9 @@ We will establish a thorough understanding of the generalization of diffusion mo
 <td>
 1:00-2:00 pm
 </td>
+<td>
+<a href="/iccv2025-tutorial/assets/slides/ICCV2025_Lec4.pdf">Slides</a>
+</td>
 </tr>
 <tr>
 <td>
@@ -633,9 +646,12 @@ We will enhance diffusion models for scientific imaging by improving their effic
 <td>
 2:00-2:45 pm
 </td>
+<td>
+<a href="/iccv2025-tutorial/assets/slides/ICCV2025_Lec5.pdf">Slides</a>
+</td>
 </tr>
 <tr>
-<td class="title" colspan="3">
+<td class="title" colspan="4">
 <strong>Session IV:</strong> Designing Deep Networks for Pursuing Low-Dimensional Structures
 </td>
 </tr>
@@ -657,6 +673,9 @@ We focus on learning data distribution and transforming it into a linear discrim
 <td>
 3:00-3:45 pm
 </td>
+<td>
+<a href="/iccv2025-tutorial/assets/slides/ICCV2025_Lec6.pdf">Slides</a>
+</td>
 </tr>
 <tr>
 <td>
@@ -676,6 +695,9 @@ Finally, we introduce sparse linear discriminative representations by combining 
 <td>
 3:45-4:30 pm
 </td>
+<td>
+<a href="/iccv2025-tutorial/assets/slides/ICCV2025_Lec7.pdf">Slides</a>
+</td>
 </tr>
 <tr>
 <td class="title" colspan="2">
@@ -683,6 +705,8 @@ Finally, we introduce sparse linear discriminative representations by combining 
 </td>
 <td>
 4:45-5:45 pm
+</td>
+<td>
 </td>
 </tr>
 </tbody>
