--- a/index.html
+++ b/index.html
@@ -720,7 +720,11 @@ Finally, we introduce sparse linear discriminative representations by combining 
 </h2>
     
 
-<p>Materials for the tutorial will be made available closer to the conference date.</p>
+<p>Slides for the tutorial may be found at the links in the schedule above.</p>
+
+<p>Video recordings for the tutorial will be made available on the <a href="https://iccv.thecvf.com/virtual/2025/tutorial/2852">official ICCV website</a> up to three weeks after the end of the conference to registered attendees, and up to three months after the end of the conference for all.</p>
+
+<p>If you don’t see video recordings at the above link yet, please stay tuned! They will be announced via <a href="https://x.com/YiMaTweets">X/Twitter</a>.</p>
 
 <section class="funding-acknowledgements">
 <h2 class="no_anchor">
